# booty

./: app.py  pyproject.toml
attached_assets/: Pasted--Solana-Arbitrage-Bot-Configuration-network-rpc-url-https-mainnet-helius-rpc-com-api-key-0-1756663319736_1756663319736.txt  Pasted--URL-http-0-0-0-0-5000-2025-08-31-18-09-51-375-bot-arbitrage-bot-INFO-Wallet-loaded-7A8MT-1756663839599_1756663839600.txt
bot/: arbitrage_bot.py  dex_connectors.py  flash_loan.py  risk_manager.py  scam_detector.py  telegram_notifier.py  token_scanner.py
config/: config.py
data/: wallet_keypair.json
utils/: math_utils.py  solana_utils.py
