[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio-mqtt>=0.16.2",
    "asyncio>=4.0.0",
    "base58>=2.1.1",
    "configparser>=7.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "solana>=0.36.9",
    "solders>=0.26.0",
    "streamlit>=1.49.1",
    "websockets>=15.0.1",
]
